style: embedded route search widget: avoid unintended wrapping

--- a/app/component/embeddedRouteSearch.scss
+++ b/app/component/embeddedRouteSearch.scss
@@ -43,9 +43,9 @@ body.route-search-page .route-search-page {
 }
 .embedded-route-search-container-heading-logo {
     height: 1.3em;
-    padding: 1px 27px 5px 5px;
+    padding: 1px 20px 5px 0px;
 }
 
 .control-panel-container ul {
-    margin: 20px 10px;
+    margin: 20px 0px;
 }
