--- a/app/component/embeddedSearch.scss
+++ b/app/component/embeddedSearch.scss
@@ -11,6 +11,7 @@
     }
     h1 {
         margin-top: 25px;
+        margin-bottom: 0.5em; // EMBARK
     }
     .main-left {
         max-width: 100%;
